@@ -1,3 +1,11 @@
+Fri Nov 22 16:25:43 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c (heap_set_increment): accept minumum additional page number.
+
+	* gc.c (gc_after_sweep): allocate pages to allocate at least
+	   RUBY_HEAP_MIN_SLOTS.
+	   [Bug #9137]
+
 Fri Nov 22 16:19:52 2013  Narihiro Nakamura  <authornari@gmail.com>
 
 	* include/ruby/intern.h (rb_gc_set_params): Deprecate
